--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://mitrafix.id/">
+    <meta property="og:url" content="https://mitrafix.com/">
     <meta property="og:title" content="Mitrafix | One Place for All IT Solutions">
     <meta property="og:description" content="Solusi IT profesional untuk efisiensi bisnis Anda. Service printer, CCTV, Jaringan, dan IT Support terbaik di Jakarta.">
     <meta property="og:image" content="https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=1200&auto=format&fit=crop">
@@ -45,8 +45,8 @@
       "@type": "LocalBusiness",
       "name": "Mitrafix IT Solutions",
       "image": "https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=800&auto=format&fit=crop",
-      "@id": "https://mitrafix.id",
-      "url": "https://mitrafix.id",
+      "@id": "https://mitrafix.com",
+      "url": "https://mitrafix.com",
       "telephone": "+6281999970857",
       "address": {
         "@type": "PostalAddress",
@@ -75,7 +75,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-gray-50 text-slate-900 overflow-x-hidden">
     <div id="root"></div>
