--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
         body {
             font-family: 'Plus Jakarta Sans', sans-serif;
-            scroll-behavior: smooth;
         }
         .bg-baby-blue { background-color: #E0F2FE; }
         .text-mitrafix-orange { color: #F97316; }
@@ -75,10 +77,11 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-gray-50 text-slate-900 overflow-x-hidden">
     <div id="root"></div>
-    <!-- Entry point untuk Vite. Gunakan path relatif tanpa slash di depan jika file ada di root yang sama -->
-    <script type="module" src="index.tsx"></script>
+    <!-- Entry point untuk Vite -->
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
